fixed link in 404

--- a/404.md
+++ b/404.md
@@ -1,4 +1,4 @@
 ---
 permalink: /404.html
 ---
-<b>While I have not written this page yet...it may be on its way! For now though you may as well [go back]{https://jalspach.github.io/AquaPanix} from whence you came.</b>
+<b>While I have not written this page yet...it may be on its way! For now though you may as well [go back](https://jalspach.github.io/AquaPanix) from whence you came.</b>
