Added some initial paragraph txt to the blog entries to clear up the post listing.

--- a/_posts/2020-07-12-NetCups.md
+++ b/_posts/2020-07-12-NetCups.md
@@ -5,5 +5,7 @@ date: 2020-07-12 17:04:00 -0800
 categories: Build
 author: James Alspach
 ---
+Not a whole lot done on this day but I did get the net-pots built. I suppose in a future iteration I may cut the holes larger to sink the cups lower into the pipes but whether or not thats necessary is something to find out later on.
+
 ## Red Solo Cups
 I tried drilling the bottoms all at once. I put three 1/4 holes in the bottoms. I was not sure how to put hols in the sides. After kicking around a hand full of ideas, Savannah recommended that we try melting the hols in. That worked great! The holes are not super constant but will work great! The flame from the lighter licks up the side and creates nice long slits.
