Added nav and HR to pages

--- a/404.md
+++ b/404.md
@@ -2,3 +2,11 @@
 permalink: /404.html
 ---
 <b>While I have not written this page yet...it may be on its way! For now though you may as well [go back](https://jalspach.github.io/AquaPanix) from whence you came.</b>
+<hr>
+<nav>
+  {% for item in site.data.navigation %}
+    <a href="{{ item.link }}" {% if page.url == item.link %}style="color: red;"{% endif %}>
+      {{ item.name }}
+    </a>
+  {% endfor %}
+</nav>
