--- a/_posts/2020-07-17-Stick-two.md
+++ b/_posts/2020-07-17-Stick-two.md
@@ -15,4 +15,5 @@ We got the sump, pump and both sticks flowing well tonight
   * While the water drains fine due to the syphon, it would be a little better if the water pooled very slightly, in the downstream end.
 * Put media in the cups
 * Raise the fish tank
+* Build clarifier
 * Plumb fish tank and clarifier
