updated layout and added a note

--- a/_posts/2022-08-07-Update.md
+++ b/_posts/2022-08-07-Update.md
@@ -6,7 +6,7 @@ date: 2022-08-07 20:40.0 -0700
 categories: Updates
 author: James Alspach
 ---
-## Guess who's back!
+### Guess who's back!
 First of all... I may go back and spell check that last post. Wow...I may have been drinking that evening.
 To catch you up though... I got divorced (not since the last update but close), bought a house, got a promotion, got in a car accident and replaced my car, took up kayaking ...its been a very busy time.
 However...this weekend I:
@@ -18,7 +18,7 @@ However...this weekend I:
 - Plumbed the return to the fish-tank
 - Plumbed the skimmer to the filter
 
-### Problems remaining / todo list
+#### Problems remaining / todo list
 - [ ] cut slots in lower skimmer intake where it sits on the bottom of the tank
 - [ ] 2" UniSeal the link between filter where the skimmer is plumbed in
 - [ ] 2" UniSeal the link between the filter and the sump
@@ -27,7 +27,7 @@ However...this weekend I:
 - [ ] Instrument the system (more on this below)
 - [ ] Add Fish and plants 
 
-### Instrumentation
+#### Instrumentation
 - Flow meters x3
   - Between pump and inlet to #1 tube
   - Between #1 tube outlet / #2 tube inlet
@@ -44,3 +44,5 @@ However...this weekend I:
   - light in various places
   - ?
 
+### Correction's
+In the begining I said that I wanted to elbows to face up in the 4" caps. Thats not true...they all face down to ensure they drain fully and break the syphon. I need to get a system diagram out there....I will work on that.
