--- a/_posts/2022-08-07-Update.md
+++ b/_posts/2022-08-07-Update.md
@@ -1,7 +1,7 @@
 ---
 published: True
 layout: post
-title: "Tanks"
+title: "Back to life..."
 date: 2022-08-07 20:40.0 -0700
 categories: Updates
 author: James Alspach
