--- a/_posts/2022-08-07-Update.md
+++ b/_posts/2022-08-07-Update.md
@@ -7,7 +7,7 @@ categories: Updates
 author: James Alspach
 ---
 ## Guess who's back!
-First of all... I may go back and spell check that last post. Wow...I may have been drinking that evening.
+First of all... I may go back and spell check that last post. Wow...I may have been drinking that evening. [Done]
 To catch you up though... I got divorced (not since the last update but close), bought a house, got a promotion, got in a car accident and replaced my car, took up kayaking ...its been a very busy time.
 However...this weekend I:
 - Got the parts out of storage (i.e. sitting in the backyard against the shed)
