a few more thoughts from today

--- a/_posts/2022-08-12-Update.md
+++ b/_posts/2022-08-12-Update.md
@@ -8,4 +8,6 @@ author: James Alspach
 ---
 Bought some rubber gaskets (actually a 2" flush valve shank washer) last night that seal the 2" connections into and out of the settling tank. They work great so far and basically turn 1 2" MPT x S and 1 2" S x FPT, into a bulkhead connection...at least in this no pressure application.
 As of tonight the system is flowing fully. 
-I still need to do a few things. I think I will build a ToDo entry (not to mention an overview of the system with a diagram) but one big thing is to tighten up all the connections (there are a lot of little drips).
+I still need to do a few things to move things forward. (I think I will build a ToDo entry (not to mention an overview of the system with a diagram)) One big thing is to tighten up all the connections (there are a lot of little drips) and get id of the zip ties.
+In the outflow basket of the filter (not sure what else to call it) I plan to fill it with plastic bottle caps as a bio / initial solids filter. We will see how that works.
+Next steps will include letting it run for a while to make sure it keeps the rock moistened. After that I need to get the electronics in so that I know the water temp. A little float valve would be good too so that the system can get topped off automatically. We will see though.
