--- a/_posts/2022-08-12-Update.md
+++ b/_posts/2022-08-12-Update.md
@@ -6,7 +6,7 @@ date: 2022-08-13 20:29.0 -0700
 categories: Updates
 author: James Alspach
 ---
-Bought some rubber gaskets (actually a 2" flush valve shank washer) last night that seal the 2" connections into and out of the settling tank. They work great so far and basically turn 1 2" MPT x S and 1 2" S x FPT, into a bulkhead connection...at least in this no pressure application.
+Bought some rubber gaskets (actually a 2" flush valve shank washer) last night that seal the 2" connections into and out of the settling tank / skimmer. They work great so far and basically turn 1 2" MPT x S and 1 2" S x FPT, into a bulkhead connection...at least in this no pressure application.
 As of tonight the system is flowing fully. 
 I still need to do a few things to move things forward. (I think I will build a ToDo entry (not to mention an overview of the system with a diagram)) One big thing is to tighten up all the connections (there are a lot of little drips) and get id of the zip ties.
 In the outflow basket of the filter (not sure what else to call it) I plan to fill it with plastic bottle caps as a bio / initial solids filter. We will see how that works.
