Fixed intro  this was all from the current wekend.

--- a/_posts/2022-08-21-Update.md
+++ b/_posts/2022-08-21-Update.md
@@ -6,7 +6,7 @@ date: 2022-08-22 08:09.0 -0700
 categories: Updates
 author: James Alspach
 ---
-Quite a weekend (plus some work from the weekend before when I forgot to post)!
+Quite a weekend!
 This will be quick and then I will edit it later.
 * Added the beginnings of a bio filter
 * Upgraded the filter with a deeper initial catch. This should make the system more efficient.
