--- a/_posts/2022-08-12-Update.md
+++ b/_posts/2022-08-12-Update.md
@@ -6,6 +6,7 @@ date: 2022-08-13 20:29.0 -0700
 categories: Updates
 author: James Alspach
 ---
+Made a little progress this weekend including creating a basic bio filter.
 {% capture string_with_newlines %}
 Bought some rubber gaskets (actually a 2" flush valve shank washer) last night that seal the 2" connections into and out of the settling tank / skimmer. They work great so far and basically turn 1 2" MPT x S and 1 2" S x FPT, into a bulkhead connection...at least in this no pressure application.
 As of tonight the system is flowing fully. 
