--- a/_posts/2021-08-14-MIA.md
+++ b/_posts/2021-08-14-MIA.md
@@ -6,6 +6,10 @@ date: 2021-08-14 19:53.0 -0700
 categories: Updates
 author: James Alspach
 ---
+# Where have I been all this time?
+{% capture string_with_newlines %}
 I have been MIA...although you would think COVID-19 would make it simple to work on a project like this...life has taken over and I have stayed too busy. I am in the process of *HOPEFULLY* (I think) buying the house we live in and while that will give me a permanent spot (more permanent somehow than the 18 years we have lived here already) it will also sap any extra money I have. No more Aquaponics, Pinball parts or random electronics projects for a while. We will just have to see how it goes though.
 Anyway...i will try to do better about keeping this updated more often...I need to look back to see if I may have done SOMETHING since my last update that I can include...don't hold your breath though.
+{% endcapture %}
 
+{{ string_with_newlines | newline_to_br }}
