formatting and electronics update

--- a/_posts/2022-08-07-Update.md
+++ b/_posts/2022-08-07-Update.md
@@ -44,4 +44,4 @@ However...this weekend I:
   - ?
 
 ## Correction's
-In the begining I said that I wanted to elbows to face up in the 4" caps. Thats not true...they all face down to ensure they drain fully and break the syphon. I need to get a system diagram out there....I will work on that.
+In the beginning I said that I wanted to elbows to face up in the 4" caps. Thats not true...they all face down to ensure they drain fully and break the syphon. I need to get a system diagram out there....I will work on that.
