--- a/_posts/2020-07-17-Stick-two.md
+++ b/_posts/2020-07-17-Stick-two.md
@@ -6,7 +6,9 @@ categories: Build
 author: James Alspach
 layout: post
 ---
-Cut the second stick of planting tube today. The trick (as any smart person probably guessed already) is a chalk line along the top as a place to always put your pilot bit and someway to minimize rotation around the center axes or along the line of the pipe. thats all :-/ anyway the holes are not perfect but will do for sure.
+Cut the second stick of planting tube today.
+{% capture string_with_newlines %}
+The trick (as any smart person probably guessed already) is a chalk line along the top as a place to always put your pilot bit and someway to minimize rotation around the center axes or along the line of the pipe. thats all :-/ anyway the holes are not perfect but will do for sure.
 I also got the last two ends built. I think the internal elbow on the feed pipe should probably face down. If it is up, that will start a siphon almost immediately and I don't want that. I want the row above to soak for a bit. In building the ends I found that my uni-bit is fantastic. The largest ring is too big but just below that is a very tight fit for 1/2" PVC. Once I hammer the PVC in place I doubt there will be any leaks from those joints.
 We got the sump, pump and both sticks flowing well tonight
 
@@ -17,3 +19,6 @@ We got the sump, pump and both sticks flowing well tonight
 * Raise the fish tank
 * Build clarifier
 * Plumb fish tank and clarifier
+{% endcapture %}
+
+{{ string_with_newlines | newline_to_br }}
