moved some things around to get the table to display right.

--- a/_posts/2022-09-13-Plants.md
+++ b/_posts/2022-09-13-Plants.md
@@ -9,15 +9,14 @@ author: James Alspach
 We got the plants...seeds anyway
 {% capture string_with_newlines %}
 Having some struggles with the bell siphons not breaking :-/ But it seems like it sometimes works so...I put seeds in tonight. I am pretty excited. We will see hot it comes out. They are not seedlings just straight seeds so...hard to say really lol
+The table struggls with the script that gives line breaks :-/
+
 {% endcapture %}
 
 | Row \ Slot | 00 | 01 | 02 | 03 | 04 | 05 | 06 | 07 | 08 | 09 | 10 | 11 | 12 | 13 |
 |:---|----|----|----|----|----|----|----|----|----|----|----|----|----|----:|
 |0|Sweet Basil|Sweet Basil|Cilantro|Cilantro|Mint|Mint|Genovese Basil|Genovese Basil|Catnip|Catnip||||x|
 |1|Sweet Basil|Sweet Basil|Cilantro|Cilantro|Mint|Mint|Genovese Basil|Genovese Basil|Catnip|Catnip|||||
-
-Not sure why this isn't displaying under Jekyell. For now, you get the idea though.
-
 
 
 {{ string_with_newlines | newline_to_br }}
