--- a/_posts/2022-09-13-Plants.md
+++ b/_posts/2022-09-13-Plants.md
@@ -6,10 +6,11 @@ date: 2022-09-13 19:29.0 -0700
 categories: update
 author: James Alspach
 ---
-We got the plants...seeds anyway
+We got the plants...well seeds anyway lol
 {% capture string_with_newlines %}
 Having some struggles with the bell siphons not breaking :-/ But it seems like it sometimes works so...I put seeds in tonight. I am pretty excited. We will see hot it comes out. They are not seedlings just straight seeds so...hard to say really lol
-The table struggls with the script that gives line breaks :-/
+Will keep an eye out looking for sprouts.
+The table struggles with the script that provides clean line breaks :-/
 
 {% endcapture %}
 
